# isaac_ros_freespace_segmentation

./: README.md
docs/: tutorial-bi3d-freespace-isaac-sim.md  tutorial-bi3d-freespace-realsense.md
gxf_isaac_occupancy_grid_projector/: CMakeLists.txt  package.xml
gxf_isaac_occupancy_grid_projector/gxf/: occupancy_grid_projector.cpp  occupancy_grid_projector.cu.cpp  occupancy_grid_projector.cu.hpp  occupancy_grid_projector.hpp  occupancy_grid_projector_ext.cpp
isaac_ros_bi3d_freespace/: CMakeLists.txt  package.xml
isaac_ros_bi3d_freespace/config/: freespace_segmentation_node.yaml  isaac_ros_bi3d_freespace_isaac_sim.rviz  isaac_ros_bi3d_freespace_zed.rviz
isaac_ros_bi3d_freespace/gxf/bi3d_freespace/: CMakeLists.txt  occupancy_grid_projector.cpp  occupancy_grid_projector.cu.cpp  occupancy_grid_projector.cu.hpp  occupancy_grid_projector.hpp  occupancy_grid_projector_ext.cpp
isaac_ros_bi3d_freespace/include/isaac_ros_bi3d_freespace/: freespace_segmentation_node.hpp
isaac_ros_bi3d_freespace/launch/: isaac_ros_bi3d_freespace.launch.py  isaac_ros_bi3d_freespace_core.launch.py  isaac_ros_bi3d_freespace_hawk.launch.py  isaac_ros_bi3d_freespace_isaac_sim.launch.py  isaac_ros_bi3d_freespace_realsense.launch.py  isaac_ros_bi3d_freespace_zed.launch.py
isaac_ros_bi3d_freespace/src/: freespace_segmentation_node.cpp
isaac_ros_bi3d_freespace/test/: freespace_segmentation_node_test.cpp  isaac_ros_freespace_segmentation_pol.py
